--- a/trunk/roadmap/src/gtk2/Makefile
+++ b/trunk/roadmap/src/gtk2/Makefile
@@ -8,7 +8,7 @@ bindir=$(INSTALLDIR)/bin
 # --- Tool specific options ------------------------------------------------
 
 RANLIB=ranlib
-STRIP=strip
+STRIP=strip -s
 
 GUICFLAGS=`pkg-config --cflags gtk+-2.0`
 GUILDFLAGS=`pkg-config --libs gtk+-2.0` $(X11LDFLAGS)
@@ -65,29 +65,19 @@ RUNTIME=gtkroadgps gtkroadmap
 
 # --- Conventional targets ----------------------------------------
 
-.PHONY: all others build runtime clean cleanone install uninstall
+.PHONY: all runtime clean install uninstall strip
 
 all: runtime
 
-others:
-	$(MAKE) -C .. CFLAGS="$(STDCFLAGS)" runtime
-	$(MAKE) -C .. -C unix CFLAGS="$(STDCFLAGS) -I.." runtime
+runtime: $(RUNTIME)
 
-build:
-	$(MAKE) -C .. CFLAGS="$(STDCFLAGS)" build
-
-runtime: others $(RUNTIME)
-
-clean: cleanone
-	$(MAKE) -C .. cleanone
-	$(MAKE) -C .. -C unix cleanone
-
-cleanone:
+clean:
 	rm -f *.o *.a *.da $(RUNTIME)
 
-install: all
-	$(MAKE) -C .. install
+strip:
 	$(STRIP) $(RUNTIME)
+
+install: all strip
 	mkdir -p $(DESTDIR)$(bindir)
 	cd $(DESTDIR)$(bindir) && rm -f $(RUNTIME) roadmap roadgps
 	install $(RUNTIME) $(DESTDIR)$(bindir)
@@ -96,7 +86,6 @@ install: all
 
 uninstall:
 	cd $(DESTDIR)$(bindir) && rm -f $(RUNTIME) roadmap roadgps
-	$(MAKE) -C .. uninstall
 
 # --- The real targets --------------------------------------------
 
