--- a/trunk/roadmap_editor/src/Makefile
+++ b/trunk/roadmap_editor/src/Makefile
@@ -325,6 +325,7 @@ cleanall:
 			$(MAKE) -C $$module clean ; \
 		fi ; \
 	done
+	find editor/ -name \*.o -exec rm {} \;
 
 rebuild: cleanall everything
 
