in the gtk versions, catch unix signals which should cause termination, and inject a message into a pipe which is being monitored by the gtk framework.  allows for graceful exit on system shutdown, for instance.

--- a/roadmap/src/gtk2/Makefile
+++ b/roadmap/src/gtk2/Makefile
@@ -53,6 +53,7 @@ RMLIBSRCS=roadmap_keyboard.c \
           roadmap_messagebox.c \
           roadmap_dialog.c \
           roadmap_fileselection.c \
+          roadmap_signals.c \
           roadmap_canvas.c
 
 RMLIBOBJS=$(RMLIBSRCS:.c=.o)
