--- a/trunk/roadmap_editor/src/gtk2/Makefile
+++ b/trunk/roadmap_editor/src/gtk2/Makefile
@@ -47,7 +47,7 @@ else
 endif
 
 
-CFLAGS = $(STDCFLAGS) $(GPECFLAGS) $(GUICFLAGS) -I.. -I/usr/local/include
+CFLAGS = $(STDCFLAGS) $(GPECFLAGS) $(GUICFLAGS) -I.. -I/usr/local/include -DNDEBUG
 LIBS = -L/usr/local/lib $(RDMLIBS) $(GPELDFLAGS) $(GUILDFLAGS) -lm
 
 # --- RoadMap sources & targets -----------------------------------
